k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rust-env
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  type: ClusterIP
