k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rust-env-ingress
spec:
  rules:
  - host: k8s.ltratcliff.com
    http:
      paths:
        - path: /
          pathType: Exact
          backend:
            service:
              name: rust-env
              port:
                number: 3000
